--- a/Good News/custom.css
+++ b/Good News/custom.css
@@ -2,6 +2,7 @@ img {
     border-color: #ffe7ba;
     border-width: 5px;
     border-style: solid;
-    max-width:95%%;
+    max-width:92%%;
     margin:0 auto;
+    display: table;
 }
