--- a/Good News/Base.lproj/Main.storyboard
+++ b/Good News/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3oP-GH-jlL">
     <dependencies>
+        <deployment version="2048" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -8,6 +9,7 @@
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="ostrich-sans-inline-regular.ttf">
+            <string>OstrichSansInline</string>
             <string>OstrichSansInline</string>
             <string>OstrichSansInline</string>
             <string>OstrichSansInline</string>
@@ -36,8 +38,8 @@
                                                 <constraint firstAttribute="width" secondItem="3ee-8S-6ZP" secondAttribute="height" multiplier="1:1" id="jiE-EU-IR1"/>
                                             </constraints>
                                         </imageView>
-                                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wV0-mV-A6U">
-                                            <rect key="frame" x="95" y="56" width="488.5" height="30.5"/>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wV0-mV-A6U">
+                                            <rect key="frame" x="95" y="54.5" width="488.5" height="34"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Corgi Saves Baby From Drowning" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l2V-QA-ODq">
                                                     <rect key="frame" x="9" y="8" width="471.5" height="18"/>
@@ -112,6 +114,9 @@
                                 <state key="normal" title="No Ads">
                                     <color key="titleColor" red="0.054901960780000002" green="0.054901960780000002" blue="0.054901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="gUj-2k-avn" kind="show" id="Hkp-uk-20p"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Msm-YR-8WX">
                                 <rect key="frame" x="180" y="555" width="240" height="30"/>
@@ -165,6 +170,61 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gBi-0j-d5o" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2627" y="339"/>
+        </scene>
+        <!--Remove Ads View Controller-->
+        <scene sceneID="WbU-KI-SUp">
+            <objects>
+                <viewController id="gUj-2k-avn" customClass="SKYRemoveAdsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Fyt-zC-Lgj"/>
+                        <viewControllerLayoutGuide type="bottom" id="WAF-5D-DUE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="krL-QK-Cjd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remove all ads from Good News." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="OCI-VI-6MZ">
+                                <rect key="frame" x="164" y="129" width="271.5" height="23.5"/>
+                                <fontDescription key="fontDescription" name="IowanOldStyle-Bold" family="Iowan Old Style" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Only $0.99" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hw5-x6-MLo">
+                                <rect key="frame" x="255" y="168" width="90" height="23.5"/>
+                                <fontDescription key="fontDescription" name="IowanOldStyle-Bold" family="Iowan Old Style" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4RY-3z-0TD">
+                                <rect key="frame" x="75" y="242" width="450" height="32"/>
+                                <color key="backgroundColor" red="1" green="0.76470588240000004" blue="0.32156862749999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="OstrichSansInline" family="Ostrich Sans Inline" pointSize="27"/>
+                                <state key="normal" title="CLICK HERE TO BUY NOW">
+                                    <color key="titleColor" red="0.054901960780000002" green="0.054901960780000002" blue="0.054901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.90588235289999997" blue="0.72941176470000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="4RY-3z-0TD" firstAttribute="width" secondItem="krL-QK-Cjd" secondAttribute="width" multiplier="0.75" id="JdW-gH-u3P"/>
+                            <constraint firstItem="OCI-VI-6MZ" firstAttribute="centerX" secondItem="krL-QK-Cjd" secondAttribute="centerX" id="Snw-xr-cZQ"/>
+                            <constraint firstItem="hw5-x6-MLo" firstAttribute="centerX" secondItem="krL-QK-Cjd" secondAttribute="centerX" id="TUB-Tg-Ew6"/>
+                            <constraint firstItem="WAF-5D-DUE" firstAttribute="top" secondItem="OCI-VI-6MZ" secondAttribute="bottom" constant="450" id="UeY-um-E4O"/>
+                            <constraint firstItem="4RY-3z-0TD" firstAttribute="centerX" secondItem="krL-QK-Cjd" secondAttribute="centerX" id="VZd-z6-WbU"/>
+                            <constraint firstItem="OCI-VI-6MZ" firstAttribute="top" secondItem="Fyt-zC-Lgj" secondAttribute="bottom" constant="65" id="esc-1u-siu"/>
+                            <constraint firstItem="4RY-3z-0TD" firstAttribute="top" secondItem="hw5-x6-MLo" secondAttribute="bottom" constant="50" id="pgl-aS-918"/>
+                            <constraint firstItem="hw5-x6-MLo" firstAttribute="top" secondItem="OCI-VI-6MZ" secondAttribute="bottom" constant="16" id="xvR-ki-49g"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="UeY-um-E4O"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ExI-BK-n9X" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3339" y="339"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="e9e-KF-JR3">
